--- a/whatdoyoumeme/src/main/resources/templates/allpictures.html
+++ b/whatdoyoumeme/src/main/resources/templates/allpictures.html
@@ -3,8 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Pictures</title>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
 </head>
 <body>
 
+<div class="container-fluid ">
+    <h1>All Pictures</h1>
+       <div class="row">
+        <div class="col-md-2 d-flex align-items-stretch" th:each="picture : ${pictures}">
+            <div class="card">
+                <img th:src="@{${picture.url}}" class="card-img-top" style="width: 100%;height: 15vw; object-fit: cover;"
+                     th:alt="${picture.name}">
+                <div class="card-body">
+                    <p class="card-text" >Kategorie <strong th:text="${picture.kategorie}"></strong> </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
 </body>
 </html>
