--- a/whatdoyoumeme/src/main/resources/templates/allpictures.html
+++ b/whatdoyoumeme/src/main/resources/templates/allpictures.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Pictures</title>
@@ -9,6 +11,7 @@
 
 <div class="container-fluid ">
     <h1>All Pictures</h1>
+    <a th:href="@{/web/addpicture}" class="btn btn-primary mb-3">Add Picture</a>
        <div class="row">
         <div class="col-md-2 d-flex align-items-stretch" th:each="picture : ${pictures}">
             <div class="card">
@@ -16,11 +19,11 @@
                      th:alt="${picture.name}">
                 <div class="card-body">
                     <p class="card-text" >Kategorie <strong th:text="${picture.kategorie}"></strong> </p>
+                    <a th:href="@{/web/changepicture/{id}(id=${picture.id})}" class="btn btn-info">Change</a>
                 </div>
             </div>
         </div>
     </div>
-
 </div>
 </body>
 </html>
