--- a/whatdoyoumeme/src/main/resources/templates/addmeme.html
+++ b/whatdoyoumeme/src/main/resources/templates/addmeme.html
@@ -13,7 +13,7 @@
     <form th:action="@{/web/addmeme}" th:object="${meme}" method="post" >
     <div class="text-center">
         <div class="card mx-auto" style="width: 18rem;">
-            <img th:src="@{${picture.url}}" th:field="*{picture}" th:value="picture" class="card-img-top" style="width: auto; height: 300px;object-fit: cover">
+            <img th:src="@{${picture.url}}"  class="card-img-top" style="width: auto; height: 300px;object-fit: cover">
             <p th:if="${#fields.hasErrors('picture')}" th:errorclass="errors" th:errors="*{picture}"/>
         </div>
     <h1>Choose a Quote to the Picture</h1>
