--- a/whatdoyoumeme/src/main/resources/templates/addmeme.html
+++ b/whatdoyoumeme/src/main/resources/templates/addmeme.html
@@ -9,25 +9,26 @@
 </head>
 <body>
 <div class="container-fluid">
-
-    <form th:action="@{/web/addmeme}" th:object="${meme}" method="post" >
     <div class="text-center">
-        <div class="card mx-auto" style="width: 18rem;">
-            <img th:src="@{${picture.url}}"  class="card-img-top" style="width: auto; height: 300px;object-fit: cover">
-            <p th:if="${#fields.hasErrors('picture')}" th:errorclass="errors" th:errors="*{picture}"/>
-        </div>
-    <h1>Choose a Quote to the Picture</h1>
 
-        <div class="form-group">
-            <select class="custom-select" multiple>
-                <option th:each="quote : ${quotes}" th:text="${quote.text}" th:value="quote" th:field="*{quote}"></option>
-            </select>
-            <p th:if="${#fields.hasErrors('quote')}" th:errorclass="errors" th:errors="*{quote}"/>
-        </div>
-        <button type="submit" class="btn btn-success">Add Quote to Picture</button>
-    </div>
+        <form th:action="@{/web/addmeme}" th:object="${meme}" method="post">
+
+            <div class="card mx-auto" style="width: 18rem;">
+               <img th:src="@{${randomPicture.url}}" class="card-img-top" style="width: auto; height: 300px;object-fit: cover">
+                <input th:name="randomPicture" th:value="${randomPicture.id}" hidden>
+                <p th:if="${#fields.hasErrors('picture')}" th:errorclass="error" th:errors="*{picture}"></p>
+            </div>
+
+            <h1>Choose a Quote to the Picture</h1>
+            <div class="form-group">
+                <select th:name="randomQuote" class="custom-select" multiple>
+                    <option th:each="randomQuote : ${quotes}" th:text="${randomQuote.text}"  th:value="${randomQuote.id}"></option>
+                </select>
+                <p th:if="${#fields.hasErrors('quote')}" th:errorclass="error" th:errors="*{quote}"></p>
+            </div>
+            <button type="submit" class="btn btn-success">Add Quote to Picture</button>
     </form>
-    <p th:if="${#fields.hasErrors('meme')}" th:errorclass="errors" th:errors="*{meme}"/>
+    </div>
 </div>
 
 
