--- a/whatdoyoumeme/src/main/resources/templates/allmemes.html
+++ b/whatdoyoumeme/src/main/resources/templates/allmemes.html
@@ -13,6 +13,8 @@
     <h1>All Memes</h1>
 
     <a th:href="@{/web/addmeme}" class="btn btn-info">Play</a>
+    <a th:href="@{/web/allpictures}" class="btn btn-info">All Pictures</a>
+    <a th:href="@{/web/allquotes}" class="btn btn-info">All Quotes</a>
     <br>
     <div class="row">
         <div class="col-md-2 d-flex align-items-stretch" th:each="meme : ${memes}">
