--- a/whatdoyoumeme/src/main/resources/templates/allpictures.html
+++ b/whatdoyoumeme/src/main/resources/templates/allpictures.html
@@ -11,8 +11,9 @@
 
 <div class="container-fluid ">
     <h1>All Pictures</h1>
-    <a th:href="@{/web/addpicture}" class="btn btn-primary mb-3">Add Picture</a>
-       <div class="row">
+    <a th:href="@{/web/addpicture}" class="btn btn-primary">Add Picture</a>
+    <a th:href="@{/web/allmemes}" class="btn btn-secondary">Back</a>
+    <div class="row">
         <div class="col-md-2 d-flex align-items-stretch" th:each="picture : ${pictures}">
             <div class="card">
                 <img th:src="@{${picture.url}}" class="card-img-top" style="width: 100%;height: 15vw; object-fit: cover;"
